--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -2,3 +2,7 @@
     /* background-color:rgb(184, 214, 240); */
     background-image: linear-gradient(to bottom right, aliceblue, rgb(136, 193, 243));
 }
+
+.center{
+    margin-bottom: 5vh;
+}
